[tool.poetry]
name = "agent-audit"
version = "0.1.0"
description = "AgentAudit — Quality scoring and trust layer for the agent economy"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115"
uvicorn = ">=0.34"
httpx = ">=0.28"
payments-py = {version = ">=1.3.3", extras = ["langchain"]}
openai = ">=1.0"
python-dotenv = ">=1.0"
langgraph = ">=0.2"
langchain-openai = ">=0.3"
langchain-core = ">=0.3"
sse-starlette = ">=2.0"
exa-py = ">=1.0"

[tool.poetry.scripts]
seller = "src.seller:main"
buyer = "src.buyer:main"
dashboard = "src.web:main"
app = "src.main:main"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
